apps/base/dremio/dremio.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dremio
  labels:
    toolkit.fluxcd.io/tenant: kog-team
