apps/base/dremio/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frontend
  namespace: dremio
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dremio.local.reinthal.me`)
      kind: Rule
      services:
        - name: dremio-client
          port: 9047
  tls:
    secretName: local-reinthal-me-tls
---
